src/ui/Search/Search.module.css
.search {
  height: 100%;
}

.search input {
  height: 100%;
  background-color: var(--color-background-search);
  border: 1px solid var(--color-background-search);
  box-shadow: inset 0 2px 5px rgba(0,0,0,.2);
  color: var(--color-text-light);
  outline: none;
  padding: 16px;
}

.results {
  margin: 0;
  background-color: var(--color-background);
  box-shadow: 0px 15px 20px 0px rgb(0 0 0 / 75%);
  max-height: 500px;
  overflow: scroll;
  position: absolute;
  right: 0;
  width: 100%;
  max-width: 400px;
  list-style: none;
  padding: 0;
}

.results li[data-highlighted="true"] {
  background-color: var(--color-background-light);
}

.searchItem {
  display: flex;
  flex-direction: row;
  gap: 8px;
}

.searchItem img {
  height: 50px;
  width: 50px;
}

.searchItem div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 8px;
  font-size: var(--dimen-font-smallest);
  overflow: hidden;
}

.searchItem p {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.searchItem .title {
  font-weight: bold;
}

.searchItem .author {
  font-weight: 300;
}

